# ApiSWYMMer

./: .gitignore  README.md  build.py  cli.py  pyproject.toml  requirements.txt
apiswymmer/: config.py
apiswymmer/plugins/: openai_explainer.py
apiswymmer/utils/: utils.py
samples/: sample_openapi.json
templates/simple/: base.html  config.yml
templates/simple/components/: delete.html  get.html  patch.html  paths.html  post.html  put.html
